# cpp-gng

./: .gitignore  CMakeLists.txt  GhostsNGoblins.sln
.snippets/: gcassert.snippet  gcassert.snippet.bak
Engine/: Animation.cpp  Animation.h  AnimationFrame.cpp  AnimationFrame.h  AnimatorAnimationEndTransition.cpp  AnimatorAnimationEndTransition.h  AnimatorRenderer.cpp  AnimatorRenderer.h  AnimatorState.cpp  AnimatorState.h  AnimatorTransition.cpp  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.cpp  Component.h  ConditionalAnimatorTransition.cpp  ConditionalAnimatorTransition.h  Engine.vcxproj  Engine.vcxproj.filters  Entity.cpp  Entity.h  EntityKeeper.cpp  EntityKeeper.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  PartialRenderer.cpp  PartialRenderer.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsHandler.cpp  PhysicsHandler.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Texture.cpp  (+11 more)
Game/: Enemy.h  EnemyKeeper.cpp  EnemyKeeper.h  Game.vcxproj  Game.vcxproj.filters  GhostsAndGoblins.cpp  GhostsAndGoblins.h  LadderCollider.cpp  LadderCollider.h  LevelScene.cpp  LevelScene.h  PlayerCamera.cpp  PlayerCamera.h  PlayerCollider.cpp  PlayerCollider.h  PlayerController.cpp  PlayerController.h  Projectile.cpp  Projectile.h  ProjectilePool.cpp  ProjectilePool.h  Zombie.cpp  Zombie.h  ZombieCollider.cpp  ZombieCollider.h  constants.h  main.cpp
